# kamoshi.org

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  astro.config.ts  biome.json  deno.json  deploy.sh  flake.nix  markdoc.config.mjs  package.json  pagefind.toml  pnpm-lock.yaml  shell.nix  tsconfig.app.json  tsconfig.json  tsconfig.node.json
content/: about.md  index.md  twtxt.txt
content/about/: index.md  pubkey-email.asc  pubkey-ident.asc
content/posts/: 2022-in-review.md  2023-no-furikaeri.md  2024-in-review.md  ai-built-a-compiler.md  another-sad-day.md  capitalism.md  css.md  css.mdx  do-it-now.md  each-person-has-a-goal.md  hanafuda.md  haskell-ffi.md  hauchiwa.md  hern.md  little-polish-words.md  mongodb-segfaults.md  naze-nihongo.md  nix-flakes.md  nixos.md  prerendering-svelte.md  remember-forums.md  removing-javascript.md  rss-summarizer.md  ruby-in-markdown.md  social-media.md  treesitter-on-the-web.md  university-postscriptum.md  why-i-use-rust.md  writing-code-considered-harmful.md
content/posts/building-an-ssg-in-rust/: bibliography.bib  index.md
content/posts/declarative-server/: bibtex.bib  index.md
content/posts/from-namecheap-to-porkbun/: bibtex.bib  index.md
content/posts/haskell-ffi/: bibtex.bib  index.md
content/posts/hisasiburi-no-toukou/: index.md
content/posts/lambda-calculus/: index.bib  index.md
content/posts/nihongo-no-bunpo/: index.md
content/posts/sejm/: index.md
content/posts/ssg-that-packs-a-punch/: index.md
content/posts/typeclasses/: index.md  ref.bib
content/posts/university-postscriptum/: index.md
content/posts/writing-code-considered-harmful/: index.md  ref.bib
content/projects/: flox.md  hauchiwa.md  infrastructure.md  website.md
content/projects/font-arena/: index.md  main.ts
content/projects/hanafuda/: index.html
content/projects/lume/: index.html  main.ts  wasm.ts  x-editor.ts  x-output.ts
content/slides/dead-simple-haskell/: hie.yaml  index.lhs
content/wiki/: computer-science-lore.md  index.md  japanese.md  kamoshi-org.md  todo.md  webfonts.md
content/wiki/aoc/: index.md
content/wiki/art/: colors.md  piano.md
content/wiki/cs/: archlinux.md  build-system.md  firefox.md  index.md  wifi.md
content/wiki/japanese/: au.md  expressions.md  index.md  interesting-words.md  kage.md  mega.md  zu-nu.md
content/wiki/touhouroom/: index.md
hauchiwa/: Cargo.toml
hauchiwa/src/: site.rs
js/: package.json  splash.js
js/components/: deno.json  package.json  tsconfig.app.json
js/flox/: lambda.ts  main.ts  package.json  pnpm-lock.yaml  wasm.ts
js/search/: package.json  pnpm-lock.yaml  vite.config.ts
js/search/src/: App.svelte  main.ts
js/vanilla/: deno.json  photos.ts  reveal.js
public/: robots.txt  splash.js
public/projects/flox/: flox_wasm_bg.wasm
public/static/css/: reveal.css
public/static/map/: data.json
queries/astro/: injections.scm
scripts/: deno.json
scripts/kanji/: App.svelte  main.ts  storage.ts
scripts/outline/: main.ts
scripts/photos/: main.ts
scripts/radicals/: App.svelte  engine.ts
scripts/search/: App.svelte  main.ts  pagefind.d.ts  pagefind.ts  props.ts  x-search.ts  x-tile.ts
scripts/src/kanji/: App.svelte
scripts/src/search/: props.ts
src/: about.rs  build.rs  datalog.rs  home.rs  hook.rs  html.rs  main.rs  markdown.rs  md.rs  model.rs  pf.rs  pipeline.rs  posts.rs  projects.rs  props.rs  rss.rs  schema.d.ts  shared.rs  slides.rs  tags.rs  twtxt.rs  types.d.ts  typst.rs  utils.rs  watch.rs  website.rs  wiki.rs
src/assets/: reveal-md.js  ruby.ts  splash.ts  timeline.json  timeline.yml
src/assets/leaflet-photo/: index.ts  styles.scss  types.d.ts
src/assets/reveal-ssr/: markdown.ts
src/assets/wiki/: ProjectSizeChart.tsx
src/components/: Icon.astro  Search.tsx  Sidenote.astro  Tab.tsx  Test.svelte  Timeline.astro  Toc.astro
src/components/base/: Footer.astro  Head.astro  Header.astro
src/content/: config.ts
src/content/misc/: intro.md
src/data/: circles.json
src/html/: about.rs  base.rs  head.rs  home.rs  isodate.rs  list.rs  microblog.rs  misc.rs  mod.rs  page.rs  post.rs  project.rs  show.rs  slideshow.rs  special.rs  tags.rs  wiki.rs
src/layouts/: Article.astro  Base.astro  BaseLayout.astro  BetterList.astro  Home.astro  List.astro  Lyrics.astro  Wiki.astro
src/md/: cite.rs  matter.rs  mod.rs  render.rs  ruby.rs
src/pages/: about.astro  about.md  about.mdx  index.astro  index.md  index.mdx  map.astro  repos.astro  search.astro  search.json.ts
src/plugin/: about.rs  datalog.rs  footer.rs  home.rs  mod.rs  posts.rs  projects.rs  slides.rs  tags.rs  twtxt.rs  wiki.rs
src/styles/: _base.scss  _fonts.scss  _kanagawa.scss  _markdown.scss  _reset.scss  _root.scss  _utils.scss  styles.scss
src/text/: md.rs  mod.rs  ruby.rs
src/ts/: captures.rs  configs.rs  mod.rs
src/utils/: ruby.ts  songs.ts  splash.ts  tree.ts  treesitter.ts
styles/: _base.scss  _flox.scss  _fonts.scss  _kanagawa.scss  _markdown.scss  _root.scss  microblog.scss  radicals.scss  styles.scss
styles/components/: _bibliography.scss  _link-tree.scss  _search.scss  kanji.scss
styles/layouts/: _home.scss  _list.scss  home.scss  list.scss  page.scss  projects.scss  search.scss  tags.scss
styles/partials/: _footer.scss  _navbar.scss
styles/photos/: leaflet.scss
styles/reveal/: reveal.scss
styles/shortcodes/: _marginnote.scss
styles/syntax/: _kanagawa.scss  _stackoverflow.scss
templates/: about.jinja  bare.jinja  home.jinja  list.jinja  map.jinja  post.jinja  project_page.jinja  project_page_html.jinja  project_page_md.jinja  projects.jinja  search.jinja  slideshow.jinja  tag.jinja  tag_cloud.jinja  thought.jinja  thoughts.jinja  wiki.jinja  wiki_pdf.jinja
templates/assets/: ascii.jinja
templates/components/: footer.jinja  head.jinja  navbar.jinja  theme.jinja  tweet.jinja  wiki_tree.jinja
templates/layouts/: bare.jinja  base.jinja
tools/: cloc.sh  deploy.sh
tools/kklc/: Cargo.toml
tools/treesitter/: Cargo.toml  package.json
tools/treesitter/queries/ecma/: highlights.scm
tools/treesitter/src/: captures.rs  configs.rs  lib.rs
(+187 files in other folders)
