[package]
name = "kamoshi"
version = "0.0.0"
edition = "2024"

[dependencies.hauchiwa]
path = "../hauchiwa"

[dependencies]
camino                 = { version = "1.1", features = ["serde1"] }
chrono                 = "0.4"
clap                   = { version = "4.5", features = ["derive"] }
emojis                 = "0.6"
glob                   = "0.3"
hayagriva              = "0.8"
hypertext              = "0.6"
pulldown-latex         = "0.7"
rayon                  = "1.10"
regex                  = "1.11"
rss                    = "2.0"
serde                  = { version = "1.0", features = ["derive"] }

# Markdown
pulldown-cmark         = "0.13"

# Pagefind
tokio                  = "1.44"
pagefind               = "1.3"

# Treesitter
tree-sitter            = "0.25"
tree-sitter-highlight  = "0.25"
tree-sitter-language   = "0.1"

# Treesitter languages
tree-sitter-asm        = "0.24"
tree-sitter-bash       = "0.23"
tree-sitter-c          = "0.23"
tree-sitter-css        = "0.23"
tree-sitter-haskell    = "0.23"
tree-sitter-html       = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json       = "0.24"
tree-sitter-md         = "0.3"
tree-sitter-python     = "0.23"
tree-sitter-regex      = "0.24"
tree-sitter-rust       = "0.23"
tree-sitter-toml-ng    = "0.7"
tree-sitter-typescript = "0.23"
