[package]
name = "kamoshi"
version = "0.0.0"
edition = "2024"

[dependencies]
camino                  = { version = "1.2", features = ["serde1"] }
chrono                  = "0.4"
clap                    = { version = "4.5", features = ["derive"] }
emojis                  = "0.8"
glob                    = "0.3"
hauchiwa                = "0.9.1"
hayagriva               = "0.9"
hypertext               = "0.12"
pulldown-latex          = "0.7"
rayon                   = "1.10"
regex                   = "1.11"
rss                     = "2.0"
serde                   = { version = "1.0", features = ["derive"] }
sequoia-openpgp         = { version = "2.0.0", default-features = false, features = ["crypto-openssl"] }
sitemap-rs              = "0.4"
reqwest                 = { version = "0.12", features = [] }
ts-rs                   = "11"

# Markdown
pulldown-cmark          = "0.13"

# Pagefind
tokio                   = "1.48"
pagefind                = "1.3"

# Treesitter
tree-sitter             = "0.26"
tree-sitter-highlight   = "0.26"
tree-sitter-language    = "0.1"

# Treesitter languages
tree-sitter-asm         = "0.24"
tree-sitter-bash        = "0.25"
tree-sitter-c           = "0.24"
tree-sitter-css         = "0.25"
tree-sitter-haskell     = "0.23"
tree-sitter-html        = "0.23"
tree-sitter-javascript  = "0.25"
tree-sitter-json        = "0.24"
tree-sitter-md          = "0.5"
tree-sitter-nix         = "0.3"
tree-sitter-python      = "0.25"
tree-sitter-regex       = "0.25"
tree-sitter-rust        = "0.24"
tree-sitter-toml-ng     = "0.7"
tree-sitter-typescript  = "0.23"
