[package]
name = "kamoshi"
version = "0.0.0"
edition = "2024"

[dependencies]
hauchiwa                = { path = "../hauchiwa" }

camino                  = { version = "1.2", features = ["serde1"] }
chrono                  = "0.4"
clap                    = { version = "4.5", features = ["derive"] }
glob                    = "0.3"
rayon                   = "1.10"
regex                   = "1.12"
thiserror               = "2.0"

serde                   = { version = "1.0", features = ["derive"] }
serde_json              = "1.0"

crepe                   = "0.2.0"
ts-rs                   = "12"

# Formats
hayagriva               = "0.9"
pulldown-latex          = "0.7"
rss                     = "2.0"
sequoia-openpgp         = { version = "2.1", default-features = false, features = ["crypto-openssl"] }

# Markdown
comrak                  = { version = "0.50", default-features = false, features = ["shortcodes"] }

# Templating
hypertext               = "0.12"

# Treesitter
tree-sitter             = "0.26"
tree-sitter-highlight   = "0.26"
tree-sitter-language    = "0.1"

# Treesitter languages
tree-sitter-asm         = "0.24"
tree-sitter-bash        = "0.25"
tree-sitter-c           = "0.24"
tree-sitter-css         = "0.25"
tree-sitter-haskell     = "0.23"
tree-sitter-html        = "0.23"
tree-sitter-javascript  = "0.25"
tree-sitter-json        = "0.24"
tree-sitter-md          = "0.5"
tree-sitter-nix         = "0.3"
tree-sitter-python      = "0.25"
tree-sitter-regex       = "0.25"
tree-sitter-rust        = "0.24"
tree-sitter-toml-ng     = "0.7"
tree-sitter-typescript  = "0.23"
